# test-game

./: .gitignore  CMakeLists.txt  readme.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fragment.glsl  light_frag.glsl  light_vert.glsl  vertex.glsl
src/main/: CMakeLists.txt  main.c
src/renderer/: CMakeLists.txt  cam.c  cam.h  predef_models.h  renderer.c  renderer.h
src/utils/: CMakeLists.txt  utils.c  utils.h
stb_image/: CMakeLists.txt
